feat(API): QuotesCase get and update
